# modu-doc

./: .gitignore  .npmrc  AGENTS.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.txt  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: architecture.md  release.md  state-model.md  testing.md
e2e-tests/: package.json  wdio.conf.ts
scripts/: capture-ui-screenshots.mjs  e2e-setup.mjs  generate-third-party-notices.mjs
src/: jsx.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_snapshot_recipe_not_null.sql
src-tauri/src/: app.rs  db.rs  debug.rs  error.rs  main.rs  types.rs
src-tauri/src/commands/: debug.rs  documents.rs  fragments.rs  misc.rs  mod.rs  packages.rs  projects.rs  recipes.rs  search.rs  settings.rs  snapshots.rs  sync.rs  workspaces.rs
src-tauri/src/services/: compiler.rs  document_path.rs  file_writer.rs  fragment.rs  mod.rs  package.rs  project.rs  recipe.rs  search.rs  snapshot.rs  watcher.rs  workspace.rs
src/app/: App.test.tsx  App.tsx  AppProvider.tsx  projectMappers.ts  screenshotMode.ts  workspaceMappers.ts
src/i18n/: i18n.ts  i18next.d.ts  icuPlural.test.ts  locales.test.ts  tMaybe.ts
src/lib/: appError.ts  debug.ts  debugPerf.ts  e2ePerf.ts  markdownPreview.test.ts  markdownPreview.ts  projectWrite.ts  syncScheduler.ts  workspaceWrite.ts
(+133 files in other folders)
