[package]
name = "modudoc"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "tls-rustls-ring-webpki", "macros", "migrate", "chrono", "uuid"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2.10.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
notify = "8.2.0"
zip = "7.0.0"

[dev-dependencies]
tauri = { version = "2.11.2", features = ["test"] }

[features]
default = []
